--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="contenedor-footer">
             <div class="content-foo">
                
-                <h4>Telefono</h4>
+                <h4>TELEFONO</h4>
                 <a href="https://wa.me/+59172863491"> <img src="img/whatsapp-line.svg"></a>
                 <p>69685061</p>
             </div>
