modificacion derechos colegio

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <p>Calle Loa S/N</p>
             </div>
         </div>
-        <h2 class="titulo-final">&copy; Derechos reservados - Colegio</h2>
+        <h2 class="titulo-final">&copy; Derechos reservados - Colegio DOMINGO SAVIO 2024</h2>
     </footer>
 </body>
 
