--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
                     
                     </div>
                 </div>
-            </div>
         </section>
         <section class="clientes contenedor">
             <h2 class="titulo">Nuestros aliados</h2>
@@ -108,14 +107,9 @@
                         <p>Te facilitamos saborear nuestras tucumanas enviandote via delivery.</p>
                     </div>
                     <div class="servicio-ind">
-                        <img src="img/ambiente.jfif" alt="">
-                        <h3>Mesas comodas</h3>
-                        <p>Te ofrecemos un ambiente comodo para disfrutar con toda la familia.</p>
-                    </div>
-                    <div class="servicio-ind">
                         <img src="img/salon.jpg" alt="">
-                        <h3>Salon de eventos sociales</h3>
-                        <p>Como anexo, te brindamos nuestros ambientes para cualquier acontesimiento social.</p>
+                        <h3>pedidos a de eventos sociales</h3>
+                        <p>Como anexo, te brindamos nuestros servicios para cualquier acontesimiento social.</p>
                     </div>
                 </div>
             </div>
@@ -137,7 +131,7 @@
             <div class="content-foo">
                 <h4>Ubicacion</h4>
                 <a href=""> <img src="img/home-4-line.svg"></a>
-                <p>Calle Loa S/N</p>
+                <p>Calle Rene Moreno S/N</p>
             </div>
         </div>
         <h2 class="titulo-final">&copy; Derechos reservados - Colegio DOMINGO SAVIO 2024</h2>
